#682 fixed models for database, renamed wrong ones and small fixes

--- a/_source/LigaCancer/RVCC.csproj
+++ b/_source/LigaCancer/RVCC.csproj
@@ -197,7 +197,7 @@
     <Content Update="Views\User\Partials\_EditUser.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
-    <Content Update="Views\VisitorAttendance\Partials\_Index.cshtml">
+    <Content Update="Views\VisitorAttendanceType\Partials\_Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Visitor\Partials\_EditVisitor.cshtml">
