#706 added social and economics statistics #712 added filter by attendance type and attendant on attendances as multiple #701 fix bug with money mask

--- a/_source/LigaCancer/appsettings.Development.json
+++ b/_source/LigaCancer/appsettings.Development.json
@@ -3,12 +3,12 @@
     "DefaultConnection": "Server=.\\;Database=rvcc;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "EmailSender": {
-    "Host": "smtp.sendgrid.net",
+    "Host": "smtp-mail.outlook.com",
     "Port": 587,
     "EnableSSL": true,
-    "UserName": "apikey",
-    "EmailFrom": "naoresponda@rvcc.com",
-    "Password": "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"
+    "UserName": "naorespondarvcc@outlook.com",
+    "EmailFrom": "naorespondarvcc@outlook.com",
+    "Password": "Rede123!"
   },
   "Admin": {
     "Email": "admin@admin.com",
@@ -16,9 +16,8 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "rvcc": "Information"
     }
   }
 }
