--- a/_source/LigaCancer/appsettings.json
+++ b/_source/LigaCancer/appsettings.json
@@ -16,7 +16,8 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "rvcc": "Information"
     }
   },
   "AllowedHosts": "*"
