--- a/_source/LigaCancer/log4net.config
+++ b/_source/LigaCancer/log4net.config
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
   <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-    <file value="logs/log.txt" />
+    <file value="logs/rvcc_.log" />
     <appendToFile value="true" />
-    <rollingStyle value="Size" />
-    <maxSizeRollBackups value="10" />
-    <maximumFileSize value="1MB" />
+    <rollingStyle value="Composite" />
+    <datePattern value="yyyyMMdd'.log'" />
+    <maxSizeRollBackups value="-1" />
+    <maximumFileSize value="10MB" />
+    
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
     </layout>
   </appender>
   <root>
-    <level value="ERROR"/>
     <appender-ref ref="RollingFile" />
   </root>
 </log4net>
