Remove credential from dev

--- a/_source/LigaCancer/appsettings.Development.json
+++ b/_source/LigaCancer/appsettings.Development.json
@@ -3,12 +3,12 @@
     "DefaultConnection": "Server=.\\;Database=rvcc;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "EmailSender": {
-    "Host": "smtp-mail.outlook.com",
+    "Host": "",
     "Port": 587,
     "EnableSSL": true,
-    "UserName": "naorespondarvcc@outlook.com",
-    "EmailFrom": "naorespondarvcc@outlook.com",
-    "Password": "Rede123!"
+    "UserName": "",
+    "EmailFrom": "",
+    "Password": ""
   },
   "Admin": {
     "Email": "admin@admin.com",
